# mlatom

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
IG/: IG.py  README  README.md  azobenzene.xyz  traj58_117200.vxyz  traj58_117200.xyz
MLatom_GICnet/: AIQM1.py  FourDAtwoItf.py  MLTPA.py  MLatom.py  MLtasks.py  README  __init__.py  args_class.py  calculator.py  doc.py  functions4Dtf.py  geomopt.py  header.py  interface_MLatomF.py  mlatom  mlatom_gui.py  ref.json  sliceData.py  thermo.py  utils.py
MLatom_GICnet/MLatomF_src/: A_KRR.f90  A_KRR_kernel.f90  D_CoulombMatrix.f90  MLmodel.f90  Makefile.cygwin  Makefile.gnu  Makefile.intel  cs.cpp  molDescr.f90  precision.f90  sampling.f90  types.f90
MLatom_GICnet/aiqm1_model/: aiqm1_dft_cv5.pt  aiqm1_dft_cv7.pt
MLatom_GICnet/documentation/: installation.txt
MLatom_GICnet/example/: mlatom.inp  mlatom.saved  test.sh
Models/aspirin/: aspirin.ic  geom
Models/azobenzene/: azobenzene.ic  geom
Models/benzene/: benzene.ic  geom
Models/ethanol/: ethanol.ic  geom
Models/malonaldehyde/: geom  malonaldehyde.ic
Models/naphthalene/: geom  naphthalene.ic
Models/paracetamol/: geom  paracetamol.ic
Models/salicylic_acid/: geom  salicylic_acid.ic
Models/toluene/: geom  toluene.ic
Models/uracil/: geom  uracil.ic
mlatom/: EEEDDDD.py  EEEDDDD_descriptor.py  EEEDDDD_nn.py  GICnet.py  LICENSE  MLTPA.py  ML_NEA.py  MLatom.py  MLtasks.py  __init__.py  _update_check.py  _version.py  _version_static.py  aimnet2.py  aiqm1.py  aiqm2.py  aiqm3.py  al.py  al_utils.py  args_class.py  ccsdtstarcbs.py  ciopt.py  composite_methods.py  constants.py  conversions.py  data.py  decorators.py  dens.py  doc.py  environment_variables.py  functionsGICnet.py  gap_md.py  gen_ts_methods.py  header.py  initial_conditions.py  interface_MLatomF.py  irc.py  kreg_api.py  krr_julia.py  log.py  (+23 more)
mlatom/MLatomF_src/: D_ID.f90  D_rel2eq.f90  MLatomF.f90  MLatomFInfo.f90  Makefile  analyze.f90  constants.f90  dataset.f90  mathUtils.f90  optionsModule.f90  (+5 more)
(+136 files in other folders)
